<resources>
    <string name="app_name">Lets Movie</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">Dont you have an account ?</string>
    <string name="title_populars">Popular movies</string>
    <string name="title_favourites">Favorites</string>
    <string name="release_date">Release date:</string>
    <string name="movie_added_to_favourite_list">Movie added to favorite list</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_password_less_than_six">Password less than six</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_favorite_movies">No favorite movies</string>
    <string name="title_movies">Movies</string>
    <string name="title_my_list">My list</string>
    <string name="title_profile">Profile</string>
    <string name="movie_detail_title">Movie Detail</string>
    <string name="overview">Overview</string>
    <string name="rating_format">Rating: %1$s</string>
    <string name="name">Name</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorites_empty">You haven\'t favorited any movies yet.</string>
    <string name="username">Username</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="invalid_credentials">Invalid credentials. Please try again.</string>
    <string name="create_tmdb_account">Create a TMDB Account</string>
    <string name="tmdb_account_description">TMDB accounts are created on the TMDB website.</string>
    <string name="open_tmdb_website">Open TMDB Website</string>
    <string name="guest_badge">Guest</string>
    <string name="splash_tagline">Discover your next favorite film</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
</resources>
