<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_popular_movies"
        android:enabled="true"
        android:icon="@drawable/ic_round_movie_24"
        android:title="@string/title_movies"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_favourite_movies"
        android:enabled="true"
        android:icon="@drawable/ic_round_turned_in_24"
        android:title="@string/title_my_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_profile"
        android:enabled="true"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

</menu>
